infra/k8s/service-1-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-1-depl
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: service-1
  template:
    metadata:
      labels:
        app: service-1
  spec:
    containers:
      - name: service-1
        image: ruthvikc27/service-1

---

apiVersion: v1
kind: Service
metadata:
  name: service-1-srv
spec:
  type: ClusterIP
  selector:
    app: service-1
  ports:
    - name: service-1
      protocol: TCP
      port: 5000
      targetPort: 5000
