infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata: 
    name: ingress-service
    annotations:
        kubernetes.io/ingress.class: nginx
        nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
    rules:
        - host: project.dev
          http: 
            paths:
                - path: /api/service-1/?(.*)
                  backend: 
                    serviceName: service-1-srv
                    servicePort: 5000
                - path: /api/service-2/?(.*)
                  backend: 
                    serviceName: service-2-srv
                    servicePort: 5000
                  
                - path: /?(.*)
                  backend:
                    serviceName: client-srv
                    servicePort: 3000
